@@ -1,3 +1,7 @@
+Tue Dec  1 18:00:12 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
+
+	* test/digest/test_digest_extend.rb: added tests for digest framework.
+
 Mon Nov 30 16:57:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/extmk.rb (command_output): $makeflags are already quoted.
